@@ -2,11 +2,10 @@ package com.simibubi.create.content.schematics;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
-import com.simibubi.create.foundation.tileEntity.SmartTileEntity;
 
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.decoration.ArmorStand;
@@ -14,6 +13,7 @@ import net.minecraft.world.entity.decoration.ItemFrame;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
+import net.minecraft.world.level.block.AbstractBannerBlock;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.DirtPathBlock;
@@ -21,41 +21,28 @@ import net.minecraft.world.level.block.FarmBlock;
 import net.minecraft.world.level.block.SeaPickleBlock;
 import net.minecraft.world.level.block.SnowLayerBlock;
 import net.minecraft.world.level.block.TurtleEggBlock;
+import net.minecraft.world.level.block.entity.BannerBlockEntity;
 import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.block.state.properties.BlockStateProperties;
 import net.minecraft.world.level.block.state.properties.SlabType;
 
 public class ItemRequirement {
+	public static final ItemRequirement NONE = new ItemRequirement(Collections.emptyList());
+	public static final ItemRequirement INVALID = new ItemRequirement(Collections.emptyList());
 
-	public enum ItemUseType {
-		CONSUME, DAMAGE
-	}
-
-	public static class StackRequirement {
-		public final ItemStack item;
-		public final ItemUseType usage;
-
-		public StackRequirement(ItemUseType usage, ItemStack item) {
-			this.item = item;
-			this.usage = usage;
-		}
-	}
-
-	List<StackRequirement> requiredItems;
-
-	public static final ItemRequirement INVALID = new ItemRequirement();
-	public static final ItemRequirement NONE = new ItemRequirement();
-
-	private ItemRequirement() {
-	}
+	protected List<StackRequirement> requiredItems;
 
 	public ItemRequirement(List<StackRequirement> requiredItems) {
 		this.requiredItems = requiredItems;
 	}
 
-	public ItemRequirement(ItemUseType usage, ItemStack items) {
-		this(Arrays.asList(new StackRequirement(usage, items)));
+	public ItemRequirement(StackRequirement stackRequirement) {
+		this(List.of(stackRequirement));
+	}
+
+	public ItemRequirement(ItemUseType usage, ItemStack stack) {
+		this(new StackRequirement(stack, usage));
 	}
 
 	public ItemRequirement(ItemUseType usage, Item item) {
@@ -63,28 +50,26 @@ public class ItemRequirement {
 	}
 
 	public ItemRequirement(ItemUseType usage, List<ItemStack> requiredItems) {
-		this(requiredItems.stream().map(req -> new StackRequirement(usage, req)).collect(Collectors.toList()));
+		this(requiredItems.stream().map(req -> new StackRequirement(req, usage)).collect(Collectors.toList()));
 	}
-
 
 	public static ItemRequirement of(BlockState state, BlockEntity te) {
 		Block block = state.getBlock();
 
-		ItemRequirement baseRequirement;
-		if (block instanceof ISpecialBlockItemRequirement) {
-			baseRequirement = ((ISpecialBlockItemRequirement) block).getRequiredItems(state, te);
+		ItemRequirement requirement;
+		if (block instanceof ISpecialBlockItemRequirement specialBlock) {
+			requirement = specialBlock.getRequiredItems(state, te);
 		} else {
-			baseRequirement = ofBlockState(state);
+			requirement = defaultOf(state, te);
 		}
 
-		// Behaviours can add additional required items
-		if (te instanceof SmartTileEntity)
-			baseRequirement = baseRequirement.with(((SmartTileEntity) te).getRequiredItems());
+		if (te instanceof ISpecialBlockEntityItemRequirement specialBE)
+			requirement = requirement.union(specialBE.getRequiredItems(state));
 
-		return baseRequirement;
+		return requirement;
 	}
 
-	private static ItemRequirement ofBlockState(BlockState state) {
+	private static ItemRequirement defaultOf(BlockState state, BlockEntity te) {
 		Block block = state.getBlock();
 		if (block == Blocks.AIR)
 			return NONE;
@@ -95,22 +80,24 @@ public class ItemRequirement {
 
 		// double slab needs two items
 		if (state.hasProperty(BlockStateProperties.SLAB_TYPE) && state.getValue(BlockStateProperties.SLAB_TYPE) == SlabType.DOUBLE)
-			return new ItemRequirement(ItemUseType.CONSUME, Arrays.asList(new ItemStack(item, 2)));
+			return new ItemRequirement(ItemUseType.CONSUME, new ItemStack(item, 2));
 		if (block instanceof TurtleEggBlock)
-			return new ItemRequirement(ItemUseType.CONSUME, Arrays.asList(new ItemStack(item, state.getValue(TurtleEggBlock.EGGS).intValue())));
+			return new ItemRequirement(ItemUseType.CONSUME, new ItemStack(item, state.getValue(TurtleEggBlock.EGGS).intValue()));
 		if (block instanceof SeaPickleBlock)
-			return new ItemRequirement(ItemUseType.CONSUME, Arrays.asList(new ItemStack(item, state.getValue(SeaPickleBlock.PICKLES).intValue())));
+			return new ItemRequirement(ItemUseType.CONSUME, new ItemStack(item, state.getValue(SeaPickleBlock.PICKLES).intValue()));
 		if (block instanceof SnowLayerBlock)
-			return new ItemRequirement(ItemUseType.CONSUME, Arrays.asList(new ItemStack(item, state.getValue(SnowLayerBlock.LAYERS).intValue())));
+			return new ItemRequirement(ItemUseType.CONSUME, new ItemStack(item, state.getValue(SnowLayerBlock.LAYERS).intValue()));
 		if (block instanceof FarmBlock || block instanceof DirtPathBlock)
-			return new ItemRequirement(ItemUseType.CONSUME, Arrays.asList(new ItemStack(Items.DIRT)));
+			return new ItemRequirement(ItemUseType.CONSUME, Items.DIRT);
+		if (block instanceof AbstractBannerBlock && te instanceof BannerBlockEntity bannerBE)
+			return new ItemRequirement(new StrictNbtStackRequirement(bannerBE.getItem(), ItemUseType.CONSUME));
 
 		return new ItemRequirement(ItemUseType.CONSUME, item);
 	}
 
 	public static ItemRequirement of(Entity entity) {
-		if (entity instanceof ISpecialEntityItemRequirement)
-			return ((ISpecialEntityItemRequirement) entity).getRequiredItems();
+		if (entity instanceof ISpecialEntityItemRequirement specialEntity)
+			return specialEntity.getRequiredItems();
 
 		if (entity instanceof ItemFrame itemFrame) {
 			ItemStack frame = new ItemStack(Items.ITEM_FRAME);
@@ -147,11 +134,7 @@ public class ItemRequirement {
 		return requiredItems;
 	}
 
-	public static boolean validate(ItemStack required, ItemStack present) {
-		return required.isEmpty() || required.getItem() == present.getItem();
-	}
-
-	public ItemRequirement with(ItemRequirement other) {
+	public ItemRequirement union(ItemRequirement other) {
 		if (this.isInvalid() || other.isInvalid())
 			return INVALID;
 		if (this.isEmpty())
@@ -164,4 +147,32 @@ public class ItemRequirement {
 		);
 	}
 
+	public enum ItemUseType {
+		CONSUME, DAMAGE
+	}
+
+	public static class StackRequirement {
+		public final ItemStack stack;
+		public final ItemUseType usage;
+
+		public StackRequirement(ItemStack stack, ItemUseType usage) {
+			this.stack = stack;
+			this.usage = usage;
+		}
+
+		public boolean matches(ItemStack other) {
+			return stack.sameItem(other);
+		}
+	}
+
+	public static class StrictNbtStackRequirement extends StackRequirement {
+		public StrictNbtStackRequirement(ItemStack stack, ItemUseType usage) {
+			super(stack, usage);
+		}
+
+		@Override
+		public boolean matches(ItemStack other) {
+			return ItemStack.isSameItemSameTags(stack, other);
+		}
+	}
 }
